Custom list view

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
         <activity
             android:name=".PaceCalculator"
             android:label="@string/title_activity_pace_calculator"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".RunningLog"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".RunningLog" />
+        <activity android:name=".New_manual_run"></activity>
     </application>
 
 </manifest>
