--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="comp5216.sydney.edu.au.rkoi2318_h3">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -11,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service android:name=".TuneService" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +27,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RunningLog" />
         <activity android:name=".NewManualRun"></activity>
+
+        <activity android:name=".MusicPlayer"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">        </activity>
     </application>
 
 </manifest>
